<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity"
    tools:viewBindingIgnore="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_insert_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_insert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@color/naranja"
                android:text="@string/tv_title_insert_activity"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:textStyle="bold"
                android:shadowColor="@color/naranja"
                android:text="@string/et_name_lastname"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_name_lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textCapWords"
                android:textColorHighlight="@color/teal_700"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/naranja"
                    android:text="@string/tv_mz"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_mz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150sp"
                    android:autofillHints="auto"
                    android:ems="10"
                    android:hint="@string/hint_a"
                    android:inputType="textCapCharacters"
                    android:textColorHighlight="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/naranja"
                    android:text="@string/tv_lt"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_lt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150sp"
                    android:ems="10"
                    android:hint="@string/hint_13"
                    android:inputType="textPersonName"
                    android:textColorHighlight="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/naranja"
                android:text="@string/tv_date"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hint_date"
                android:inputType="date"
                android:textColorHighlight="@color/teal_700"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/naranja"
                    android:text="@string/tv_cilindro"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_cylinder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="90sp"
                    android:ems="10"
                    android:hint="@string/hint_cilindro"
                    android:inputType="number"
                    android:textColorHighlight="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/naranja"
                    android:text="@string/tv_valdes"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_bucket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_valdes"
                    android:inputType="number"
                    android:textColorHighlight="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/naranja"
                    android:text="@string/tv_total"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_total"
                    android:inputType="numberDecimal"
                    android:textColorHighlight="@color/teal_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#59a668"
                    android:text="@string/btn_txt_save"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#E53935"
                    android:minWidth="25dp"
                    app:icon="@drawable/ic_baseline_delete_24"
                    app:iconPadding="0dp"
                    android:layout_marginTop="10dp"
                    tools:visibility="visible" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>